--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-scratchings",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.x"
+    "express": "2.x",
+    "ejs": "0.6.x"
   }
 }
