--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "2.x",
-    "ejs": "0.6.x"
+    "ejs": "0.6.x",
+    "redis": "0.7.x",
+    "connect-redis": "1.2.x",
+    "underscore": "1.3.x"
   }
 }
