--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "0.6.x",
     "redis": "0.7.x",
     "connect-redis": "1.2.x",
-    "underscore": "1.3.x"
+    "underscore": "1.3.x",
+    "redis-url": "0.0.1"
   }
 }
