fixing node's location in package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "web-scratchings",
   "version": "0.0.1",
+  "engines": {
+    "node": "0.4.10"
+  },
   "dependencies": {
-    "node": "0.4.10",
     "express": "2.x",
     "ejs": "0.6.x",
     "redis": "0.7.x",
